Improve support for VS Code debugging
- Make sure .vscode IDE configuration is included

- Add source maps to the TypeScript configuration so that debugging
  breakpoints are identified by the attached debugger.

- Add the "restart" launch property so that the debugger will re-attach
  when nodemon restarts the server within the container.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+# Dependencies
 node_modules
+
+# Generated output
 dist
+
+# Environment configuration files
 .env
+
+# ---
+# WARNING: While it is generally recommended one should not commit IDE
+# configurations, this project shares it intentionally because the debugging
+# configuration with Docker + docker-compose isn't obvious.
+#
+# Modify with shared use in mind.
+
+# Ensure .vscode configuration is included
+!.vscode
