--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,10 +7,16 @@
     {
       "type": "node",
       "request": "attach",
-      "name": "Debug: Attach to Server",
+      "name": "Attach to Server",
       "remoteRoot": "/usr/src/app",
       "port": 9229,
       "restart": true
+    },
+    {
+      "name": "Launch Client on Chrome",
+      "request": "launch",
+      "type": "pwa-chrome",
+      "url": "http://localhost:4000",
     }
   ]
 }
