--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:14.5.0
 
-RUN mkdir /usr/src/app
-WORKDIR /usr/src/app
+RUN mkdir /usr/src/server
+WORKDIR /usr/src/server
 
 COPY package*.json ./
 RUN npm ci
@@ -9,7 +9,7 @@ RUN npm ci
 COPY . .
 RUN npm run compile
 
-EXPOSE 3000
+EXPOSE 4000
 
 USER node
 CMD ["node", "./dist/main.js"]
